@@ -1,5 +1,6 @@
 2015.10.05 Version 4.0-alpha-1
- * Added preview support for client side encryption for blobs, queues and tables.
+ * Added support for client side encryption for blobs, queues and tables.
+ * Since the encryption preview, added functionality where uploading encrypted blobs can be done with just PutBlob, not PutBlock + PutBlockList, if the blob is small enough.
 
 2015.10.05 Version 4.0.0
  * Removed deprecated table AtomPub support.
